// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useCategories should render in categories error state 1`] = `
<div>
  <span
    data-test="categories-error"
  >
    An awesome, fascinating and incredible error
  </span>
</div>
`;

exports[`useCategories should render in categories fetched state 1`] = `
<div>
  <span
    data-test="categories-result"
  >
    [{"id":135967,"name":"Clothing","gender":"Woman"},{"id":135973,"name":"Accessories","gender":"Woman"},{"id":135981,"name":"Trousers","parentId":135967,"gender":"Woman"},{"id":136330,"name":"Clothing","gender":"Man"},{"id":136337,"name":"Denim","parentId":136330,"gender":"Man"},{"id":136338,"name":"Trousers","parentId":136330,"gender":"Man"}]
  </span>
  <span
    data-test="categories-topResult"
  >
    [{"id":135973,"name":"Accessories","gender":"Woman"},{"id":135967,"name":"Clothing","gender":"Woman"},{"id":136330,"name":"Clothing","gender":"Man"}]
  </span>
  <button
    data-test="categories-getButton"
  >
    get categories request
  </button>
  <button
    data-test="categories-getTopButton"
  >
    get top categories request
  </button>
  <button
    data-test="categories-resetButton"
  >
    reset categories state
  </button>
  <span
    data-test="categories-getCategory"
  >
    {"id":135973,"name":"Accessories","gender":"Woman"}
  </span>
  <span
    data-test="categories-getRootCategory"
  >
    {"id":135967,"name":"Clothing","gender":"Woman"}
  </span>
  <span
    data-test="categories-fetched"
  >
    yes
  </span>
  <span
    data-test="topCategories-fetched"
  >
    yes
  </span>
</div>
`;

exports[`useCategories should render in categories loading state 1`] = `
<div>
  <span
    data-test="categories-loading"
  >
    yes
  </span>
</div>
`;

exports[`useCategories should render in top categories error state 1`] = `
<div>
  <span
    data-test="topCategories-error"
  >
    An awesome, fascinating and incredible error
  </span>
</div>
`;

exports[`useCategories should render in top categories fetched state 1`] = `
<div>
  <span
    data-test="categories-result"
  >
    []
  </span>
  <span
    data-test="categories-topResult"
  >
    [null,null,null]
  </span>
  <button
    data-test="categories-getButton"
  >
    get categories request
  </button>
  <button
    data-test="categories-getTopButton"
  >
    get top categories request
  </button>
  <button
    data-test="categories-resetButton"
  >
    reset categories state
  </button>
  <span
    data-test="categories-getCategory"
  />
  <span
    data-test="categories-getRootCategory"
  />
  <span
    data-test="categories-fetched"
  >
    no
  </span>
  <span
    data-test="topCategories-fetched"
  >
    yes
  </span>
</div>
`;

exports[`useCategories should render in top categories loading state 1`] = `
<div>
  <span
    data-test="topCategories-loading"
  >
    yes
  </span>
</div>
`;

exports[`useCategories should render with the initial state 1`] = `
<div>
  <span
    data-test="categories-result"
  >
    []
  </span>
  <span
    data-test="categories-topResult"
  >
    []
  </span>
  <button
    data-test="categories-getButton"
  >
    get categories request
  </button>
  <button
    data-test="categories-getTopButton"
  >
    get top categories request
  </button>
  <button
    data-test="categories-resetButton"
  >
    reset categories state
  </button>
  <span
    data-test="categories-getCategory"
  />
  <span
    data-test="categories-getRootCategory"
  />
  <span
    data-test="categories-fetched"
  >
    no
  </span>
  <span
    data-test="topCategories-fetched"
  >
    no
  </span>
</div>
`;
